complete MCP tool set up(auto-join, real-time transcribe and RAG) plus dockerization

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       # Persist your Selenium profile.
       - selenium_profile:/tmp/selenium_profile
       # Mount the host's PulseAudio socket so the container can connect.
-      - "/run/user/1000/pulse:/run/user/1000/pulse"
+      - "/tmp/pulse:/tmp/pulse"
     environment:
       - MEET_URL=${MEET_URL}
       - GOOGLE_USERNAME=${GOOGLE_USERNAME}
@@ -16,6 +16,6 @@ services:
       - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
       - EDGE_DRIVER_PATH=/usr/local/bin/msedgedriver
       # Tell applications where to find the PulseAudio server.
-      - PULSE_SERVER=unix:/run/user/1000/pulse/native
+      - PULSE_SERVER=tcp:host.docker.internal:4713
 volumes:
   selenium_profile:
